--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,12 @@ footer p {
 }
 
 .img-fit {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   max-height: 100%;
+  width: 20%;
+  height: 20%;
 }
 
 .alert {
@@ -190,15 +195,30 @@ a.custom-card:hover {
 }
 
 .datos{
-  padding: 6px;
+  padding: 10px;
   width: 100%;
   box-sizing: border-box;
+  margin-bottom: -1px;
 }
 
 #boton{
-  padding: 6px;
+  padding: 10px;
   background-color: #0087F7;
+  color: white;
+  font-size: 20px;
   border: none;
   border-radius: 3px;
   width: 100%;
+}
+
+#h1-login{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 25px;
+  text-align: center;
+  padding: 10px;
+}
+
+#check{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 10px;
 }
