--- a/css/styles.css
+++ b/css/styles.css
@@ -188,3 +188,38 @@ a.custom-card:hover {
 .checked {
   color: orange;
 }
+
+.info-auto{
+  width: 100%;
+  height: 200px;
+  border-style: solid;
+  border-radius: 10px;
+  border-color: gray;
+  border-width: 1px;
+}
+
+.img-left{
+  display: block;
+  max-height: 100%;
+  border-radius: 10px;
+  border-style: solid;
+  margin-top: auto;
+  margin-bottom: auto;
+  border-color: gray;
+  border-width: 2px;
+  float: left;
+}
+
+.h2-multi{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 20px;
+  text-align: center;
+  padding: 10px;
+}
+
+.h1-multi{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 30px;
+  text-align: center;
+  padding: 10px;
+}
