--- a/css/styles.css
+++ b/css/styles.css
@@ -241,3 +241,12 @@ padding: 10px;
   padding: 3px;
   border-width: 3px;
 }
+
+h1 {
+  padding: 30px;
+  font-size: 70px;
+  font-family:arial;
+  letter-spacing: 20px;
+  font-weight: bold;
+}
+  
