--- a/css/styles.css
+++ b/css/styles.css
@@ -194,27 +194,6 @@ a.custom-card:hover {
   color: orange;
 }
 
-.info-auto{
-  width: 100%;
-  height: 200px;
-  border-style: solid;
-  border-radius: 10px;
-  border-color: gray;
-  border-width: 1px;
-}
-
-.img-left{
-  display: block;
-  max-height: 100%;
-  border-radius: 10px;
-  border-style: solid;
-  margin-top: auto;
-  margin-bottom: auto;
-  border-color: gray;
-  border-width: 2px;
-  float: left;
-}
-
 .img-thumbnail{
   float: left;
 }
@@ -266,12 +245,13 @@ a.custom-card:hover {
   padding: 10px;
 }
 
-
+/*
 .list-group-item:hover{
   border-color: rgb(236, 108, 33);
   padding: 3px;
   border-width: 3px;
 }
+*/
 
 h1 {
   padding: 30px;
