Hover como se debe

--- a/css/styles.css
+++ b/css/styles.css
@@ -245,13 +245,13 @@ a.custom-card:hover {
   padding: 10px;
 }
 
-/*
-.list-group-item:hover{
+
+.ho-ver:hover{
   border-color: rgb(236, 108, 33);
   padding: 3px;
   border-width: 3px;
 }
-*/
+
 
 h1 {
   padding: 30px;
