--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,12 @@ footer p {
 }
 
 .img-fit {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   max-height: 100%;
+  width: 20%;
+  height: 20%;
 }
 
 .alert {
@@ -187,4 +192,30 @@ a.custom-card:hover {
 
 .checked {
   color: orange;
+}
+
+
+
+.ho-ver:hover{
+  border-color: rgb(236, 108, 33);
+  padding: 3px;
+  border-width: 3px;
+}
+
+
+h1 {
+  padding: 30px;
+  font-size: 70px;
+  font-family:arial;
+  letter-spacing: 20px;
+  font-weight: bold;
+}
+
+#descripcion {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: white;
+  font-size: 25px;
+  font-family: sans-serif;
+  background-color: rgb(236, 108, 33);
 }
