--- a/css/styles.css
+++ b/css/styles.css
@@ -280,3 +280,18 @@ h1 {
   background-color: rgb(236, 108, 33);
   color: white;
 }
+
+#userName {
+  background-color: #212529;
+  border: none;
+}
+
+.dropdown-item {
+  font-family:sans-serif;
+  background-color: #212529;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.dropdown-menu {
+  background-color: #212529;
+}
