--- a/css/styles.css
+++ b/css/styles.css
@@ -300,3 +300,55 @@ h1 {
   width: 50%;
   margin-left: 25%;
 }
+
+#switch {
+  margin-left: 5rem;
+}
+.switchDark{
+  background-color: #4b0b3c;
+  display: flex;
+  position: relative;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  border-radius: 1rem;
+  align-items: center;
+  justify-content: space-between;
+}
+.switchDark span{
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  display: block;
+  color: #fff;
+  background: none;
+}
+.switchDark::after{
+  display: block;
+  background: #fffbf5;
+  width: 1.8rem;
+  height: 1.8rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: unset;
+  border-radius: 50%;
+  transition: all .5s ease;
+  box-shadow: 0 0 1.5px 1.5px rgba(0, 0, 0, .5);
+  content: "";
+}
+.switchDark.active{
+  background: #84a8fd;
+}
+.switchDark.active::after{
+  left: unset;
+  right: 0;
+}
+body{
+  background: #f5f0f0;
+  color: #2e2d2d;
+}
+body.dark{
+  background: #2e2d2d;
+  color: #f5f0f0;
+}
