--- a/css/styles.css
+++ b/css/styles.css
@@ -204,8 +204,8 @@ a.custom-card:hover {
 
 
 h1 {
-  padding: 30px;
-  font-size: 70px;
+  /* padding: 30px; */
+  /* font-size: 70px; */
   font-family:arial;
   letter-spacing: 20px;
   font-weight: bold;
