--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,17 @@
+/* VALIDAR FORM POPUP */
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 20px;
+  background-color: lightgreen;
+  border: 1px solid darkgreen;
+  border-radius: 5px;
+}
+/* FIN VALIDAR FORM POPUP */
+
 .jumbotron,
 .card-body,
 .container,
