--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,34 @@
 }
 /* FIN VALIDAR FORM POPUP */
 
+/* MY-PROFILE CSS */
+.profileinfodiv {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.profitem {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.profitem label {
+  margin-bottom: 5px;
+}
+
+.profitem input{
+  max-width: 100%;
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+}
+/* FIN DE MY PROFILE CSS */
+
+
 .jumbotron,
 .card-body,
 .container,
