--- a/css/styles.css
+++ b/css/styles.css
@@ -409,6 +409,34 @@ body.dark{
   background-color: greenyellow;
 }
 
+#img-perfil{
+  margin-top: 2em;
+  min-width: 200px;
+  min-height: 200px;
+  max-width: 200px;
+  max-height: 200px;
+}
+
+#upload-picture{
+  margin-bottom: 5em;
+  margin-top: 2em;
+  display: inline-block;
+  margin-left: 22em;
+}
+
+#titulo-perfil {
+  float: left;
+  margin-top: 2em;
+  margin-left: 8em;
+  letter-spacing: 1em;
+}
+
+#guardar-cambios {
+  margin-top: 2em;
+  margin-left: 23em;
+}
+
+
 @media screen and (max-width: 950px) {
   h1{
     padding: 20px;
@@ -428,28 +456,4 @@ body.dark{
   }
   
 
-#img-perfil{
-  margin-top: 2em;
-  min-width: 200px;
-  min-height: 200px;
-  max-width: 200px;
-  max-height: 200px;
-}
-
-#upload-picture{
-  float: right;
-  margin-bottom: 5em;
-
-}
-
-#titulo-perfil {
-  float: left;
-  margin-top: 2em;
-  margin-left: 8em;
-}
-
-#guardar-cambios {
-  margin-top: 5em;
-  margin-left: 21em;
-}
 
